k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deployment
  labels:
    app: homepage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - name: homepage
        image: ghcr.io/theodoreherzfeld/personal:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          periodSeconds: 10
