k8s/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
spec:
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
